# SQLite3

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  cmake-msvc2017.bat  libsqlite.pri  libsqlite.pro  libsqlite_src.pri
test/: CMakeLists.txt  sqlite_demo.c
